# bitcoin-wasm

./: Cargo.toml  README.md  artifacts.wasm  cargo.toml
crates/kv/: Cargo.toml
crates/kv/src/: bindings.rs  bit_cask_key.rs  clock.rs  config.rs  entry.rs  errors.rs  field_generator.rs  key_directory.rs  kvstore.rs  lib.rs  merge_config.rs  merged_state.rs  segment.rs  segments.rs  store.rs
crates/kv/wit/: world.wit
crates/kvstore/: Cargo.toml
crates/kvstore/src/: bindings.rs  error.rs  lib.rs  node_type.rs  page_layout.rs  pager.rs
crates/kvstore/wit/: world.wit
crates/store/: Cargo.toml
crates/store/src/: bindings.rs  btree.rs  error.rs  lib.rs  node.rs  node_type.rs  page.rs  pager.rs  wal.rs
crates/store/wit/: types.wit  world.wit
crates/tbdex/: Cargo.toml
crates/tbdex/http_client/: mod.rs  offerings.rs
crates/tbdex/src/: bindings.rs  client.rs  jose.rs  json.rs  lib.rs  main.rs  request.rs  signature.rs
crates/tbdex/src/crypto/dsa/: ed25519.rs
crates/tbdex/src/crypto/key_managers/: in_memory_key_manager.rs
crates/tbdex/src/dids/methods/: mod.rs
crates/tbdex/src/dids/methods/did_dht/: bep44.rs  mod.rs
crates/tbdex/src/dids/methods/did_dht/document_packet/: mod.rs  rdata_encoder.rs  service.rs  verification_method.rs
crates/tbdex/src/dids/resolution/: resolution_result.rs
crates/tbdex/src/http/: balances.rs  exchanges.rs  mod.rs  offerings.rs
crates/tbdex/src/http_client/: balances.rs  exchanges.rs  mod.rs  offerings.rs
crates/tbdex/src/json_schemas/: generated.rs  mod.rs
crates/tbdex/src/messages/: cancel.rs  close.rs  mod.rs  order.rs  order_instructions.rs  order_status.rs  quote.rs  rfq.rs
crates/tbdex/src/resources/: balance.rs  mod.rs  offering.rs
crates/tbdex/src/web5/: mod.rs  request.rs
crates/tbdex/src/web5/credentials/: mod.rs  presentation_definition.rs  verifiable_credential_1_1.rs
crates/tbdex/src/web5/crypto/dsa/: ed25519.rs  mod.rs  secp256k1.rs
crates/tbdex/src/web5/crypto/key_managers/: in_memory_key_manager.rs  key_manager.rs  mod.rs
crates/tbdex/src/web5/dids/: bearer_did.rs  did.rs
crates/tbdex/src/web5/dids/data_model/: document.rs  verification_method.rs
crates/tbdex/src/web5/dids/methods/: mod.rs
crates/tbdex/src/web5/dids/methods/did_dht/: bep44.rs  mod.rs
crates/tbdex/src/web5/dids/methods/did_dht/document_packet/: also_known_as.rs  controller.rs  mod.rs  root_record.rs  service.rs  verification_method.rs
crates/tbdex/src/web5/dids/resolution/: resolution_result.rs
crates/tbdex/wit/: types.wit  world.wit
crates/wallet/: Cargo.toml
crates/wallet/src/: bindings.rs  coin_selection.rs  errors.rs  lib.rs  tx_builder.rs  types.rs  utils.rs  wallet.rs
crates/wallet/wit/: world.wit
examples/mobile-money/: Cargo.toml  README.md  bitcoind-node.sh  build.rs  docker-compose.yml
examples/mobile-money/src/: bindings.rs  main.rs
examples/mobile-money/wit/: world.wit
light-client/: Cargo.toml
light-client/src/: bindings.rs  buffer.rs  lib.rs  node.rs  p2p.rs  p2pdummy.rs  tcpsocket.rs
light-client/wit/: world.wit
lightning-wasm/: Cargo.toml
lightning-wasm/src/: cli.rs  http.rs  main.rs
node/: Cargo.toml
node/src/: bindings.rs  chain.rs  db.rs  lib.rs  main.rs  node.rs  p2p.rs  tcpsocket.rs  wallet.rs
node/src/messages/: block.rs  block_header.rs  block_locator.rs  compact_filter.rs  compact_filter_header.rs  filter_locator.rs  headers.rs  inv_vect.rs  message.rs  message_header.rs  mod.rs  node_addr.rs  tx.rs  tx_in.rs  tx_out.rs  version.rs  witness.rs
node/src/util/: bits.rs  block_filter.rs  hash160.rs  hash256.rs  mod.rs  result.rs  var_int.rs
node/wit/: types.wit  world.wit
test-programs/: docker-compose.yml  test-runner.sh
test-programs/artifacts/: Cargo.toml
test-programs/artifacts/src/: bindings.rs  lib.rs  node_test.rs  store_test.rs
test-programs/artifacts/wit/: world.wit
test-programs/cli/: Cargo.toml
test-programs/cli/src/: bindings.rs  main.rs
test-programs/cli/wit/: world.wit
test-programs/runner/: Cargo.toml  build.rs  dependencies.yaml
test-programs/runner/src/: bindings.rs  main.rs
test-programs/runner/wit/: world.wit
testfolder/: WalletCredential
testfolder/bitcoin-wasm/: 1002659241_bitcask.data  1028246531_bitcask.data  1041151659_bitcask.data  1109844794_bitcask.data  1733291223_bitcask.data  310777093_bitcask.data  317373576_bitcask.data  329545391_bitcask.data
tests/: docker-compose.yml  test-runner.sh
tests/artifacts/: Cargo.toml
tests/artifacts/src/: bindings.rs  lib.rs  node_test.rs  store_test.rs  tbdx_test.rs
tests/artifacts/wit/: world.wit
tests/cli/src/: main.rs
tests/cli/wit/: world.wit
tests/runner/: Cargo.toml  build.rs
tests/runner/src/: main.rs
tests/runner/src/artifacts/: mod.rs  node_test.rs  store_test.rs
tests/runner/wit/: artifacts.wit
wallet/: Cargo.toml
wallet/src/: core.rs  database.rs  lib.rs  store.rs
