[package]
name = "light-client"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.28.0", features = ["bitflags"] }
tokio = { version = "1.38.1", features = ["sync"] }
mio = "1.0.0"
bitcoin = { version = "0.32.2", features = ["bitcoinconsensus"] }
wasi = "0.13.1+wasi-0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:light-client"

[package.metadata.component.dependencies]
