[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.28.0", features = ["bitflags"] }
tokio = { version = "1.38.1", features = ["sync"] }
mio = "1.0.0"
bitcoin = { version = "0.32.2", default-features = false }
wasi = "0.13.1+wasi-0.2.0"
byteorder = "1.2"
libsecp256k1 ={ version = "0.7.1", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
ring = { version = "0.17.8", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
base58 = "0.2.0"

[dev-dependencies]
hex = "0.4.3"

# [lib]
# crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:node"

[package.metadata.component.dependencies]
