[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
bdk = { version = "0.29.0", features = ["std", "keys-bip39"] }
bdk_file_store = "0.13.0"
wasi = "0.13.1+wasi-0.2.0"


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:wallet"

[package.metadata.component.dependencies]
