[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
wasi = "0.13.1+wasi-0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:kv"

[package.metadata.component.dependencies]
