[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
wasi = "0.13.1+wasi-0.2.0"
sled = "0.34.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:kvstore"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
