[package]
name = "web5"
version = "0.1.0"
edition = "2021"
resolver = "2"


[dependencies]
wit-bindgen-rt = { version = "0.29.0", features = ["bitflags"] }
base64 = "0.22.0"
sha2 = { version = "0.10.8", features = ["force-soft"] }
serde = { version = "1.0.193", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["alloc"] }
thiserror = "1.0.63"
wasi = "0.13.1+wasi-0.2.0"
simple-dns = "0.7.0"
url = "2.5.2"
byteorder = { version = "1", default-features = false }
zbase32 = "0.1.2"
anyhow = { version = "1.0.86" }

[dev-dependencies]
k256 = { version = "0.13.3", features = ["ecdsa", "jwk"] }
ed25519-dalek = { version = "2.1.1" }
rand = "0.8.5"



[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:web5"

[package.metadata.component.dependencies]
