[package]
name = "web5"
version = "0.1.0"
edition = "2021"
resolver = "2"


[dependencies]
wit-bindgen-rt = { version = "0.29.0", features = ["bitflags"] }
base64 = "0.22.0"
sha2 = { version = "0.10.8", features = ["force-soft"] }
serde = { version = "1.0.193", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["alloc"] }
thiserror = "1.0.63"
wasi = "0.13.1+wasi-0.2.0"
simple-dns = "0.7.0"
url = "2.5.2"
byteorder = { version = "1", default-features = false }
zbase32 = "0.1.2"
anyhow = { version = "1.0.86" }
serde-json-core = "0.5.1"
serde_json = { version = "1.0.122", default-features = false, features = ["alloc"] }
regex = "1.10.6"
jwt-compact = { version = "0.8.0", default-features = false, features = ["ed25519-compact"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde", "alloc"] }
ed25519-compact = { version = "2.1.1", default-features = false , features = ["ed25519"] }
uuid = { version = "1.10.0", default-features = false }
jsonpath-rust = "0.5.0"
jsonschema = { version = "0.18.0", default-features = false }

[dev-dependencies]
k256 = { version = "0.13.3", features = ["ecdsa", "jwk"] }
ed25519-dalek = { version = "2.1.1" }
rand = "0.8.5"



[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:web5"

[package.metadata.component.dependencies]
