[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc"]}
bitcoin = { version = "0.32.2", default-features = false, features = ["serde"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
wasi = "0.13.1+wasi-0.2.0"


[dev-dependencies]
rand = "0.8"
bitcoin = { version = "0.32.2" }
 

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:wallet"

[package.metadata.component.dependencies]
