[package]
name = "mobile-money"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3.0"
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
wasmtime-wasi-http = "24.0.0"
bitcoin = "0.32.2"


[build-dependencies]
wit-component = "0.212.0"
serde_yaml = "0.9.34+deprecated"
cargo_metadata = "0.18.1"

[package.metadata.mobilemoneycomponent]
"node" = {path = "../../node/wit/world.wit"}