[package]
name = "artifacts"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }




[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:artifacts"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:node" = {path = "../../node/wit"}
"component:tbdex" = {path = "../../crates/tbdex/wit"}
"component:store" = {path = "../../crates/store/wit"}