[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
wasmtime-wasi-http = "24.0.0"

[build-dependencies]
wit-component = "0.212.0"
serde_yaml = "0.9.34+deprecated"
cargo_metadata = "0.18.1"


[package.metadata.runnercomponent]
"node" = {path = "../../node/wit/world.wit"}
"tbdex" = {path = "../../crates/tbdex/wit/world.wit"}
"kvstore" = {path = "../../crates/kvstore/wit/world.wit"}